// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public API > srd-rules-engine 1`] = `
[
  "ABILITIES",
  "ABILITY_FULL_NAMES",
  "ABILITY_METHODS",
  "ABILITY_NAMES",
  "ADVANTAGE_TARGETS",
  "ALIGNMENTS",
  "ALIGNMENT_NAMES",
  "AbilityBonusSchema",
  "AbilityFullNameSchema",
  "AbilityScoresSchema",
  "AcCalculationSchema",
  "ActionCheckSchema",
  "AdvantageGrantSchema",
  "AreaPreviewSchema",
  "ArmorSchema",
  "BackgroundSchema",
  "BattleMapSchema",
  "BuildError",
  "CHARACTER_CLASSES",
  "CHOICE_KINDS",
  "COIN_VALUES",
  "CORE_TABLES",
  "CURRENCIES",
  "CharacterBuildSchema",
  "CharacterSchema",
  "CharacterStateSchema",
  "ChoiceDefSchema",
  "ChoiceOptionSchema",
  "ClassSchema",
  "CombatantOptionsSchema",
  "ConditionSchema",
  "ContentError",
  "CreationSchema",
  "DAMAGE_TYPES",
  "DEFAULT_SCORE",
  "DEFAULT_SOURCE",
  "DOCUMENT_VERSION",
  "DamageRiderSchema",
  "DocumentVersionSchema",
  "ECONOMY",
  "EFFECT_CONDITIONS",
  "EFFECT_OPS",
  "EFFECT_TARGETS",
  "EffectEndSchema",
  "EffectSchema",
  "EncounterActionSchema",
  "EncounterCombatantSchema",
  "EncounterEffectSchema",
  "EncounterError",
  "EncounterEventSchema",
  "EncounterHistorySchema",
  "EncounterSchema",
  "FEATURE_RULES",
  "FeatGrantSchema",
  "FeatSchema",
  "FeatureActionSchema",
  "GearSchema",
  "GrantsSchema",
  "HelpSchema",
  "ItemGrantSchema",
  "ItemInstanceSchema",
  "LanguageSchema",
  "LevelUpSchema",
  "MAGIC_ITEM_CATEGORIES",
  "MAX_ATTUNED",
  "MAX_DICE",
  "MAX_SIDES",
  "MagicItemSchema",
  "MasteryMarkSchema",
  "MasterySchema",
  "MonsterActionSchema",
  "MonsterSchema",
  "MovePreviewSchema",
  "NO_CONDITION_ROLLS",
  "OPTION_COSTS",
  "OptionEntrySchema",
  "PATCH_OPS",
  "POINT_KINDS",
  "PackManifestSchema",
  "PatchError",
  "PatchSchema",
  "PendingSchema",
  "PlayActionSchema",
  "PlayError",
  "PointBuySchema",
  "PointOfInterestSchema",
  "PrerequisiteSchema",
  "REFUSAL_CODES",
  "ROLL_MODES",
  "ReachableSchema",
  "Resolution",
  "ResourceSchema",
  "SEVERITIES",
  "SIZES",
  "SKILLS",
  "SKILL_ABILITY",
  "SPELL_AREAS",
  "SRD_PACK_ID",
  "STEPS",
  "STEP_TITLES",
  "SpeciesSchema",
  "SpellAreaSchema",
  "SpellDamageSchema",
  "SpellDefSchema",
  "SpellMarkSchema",
  "SpellMechanicsSchema",
  "SpellcastingSchema",
  "SubclassSchema",
  "TABLE_NAMES",
  "TABLE_SCHEMAS",
  "TargetSpecSchema",
  "ToolSchema",
  "TraitSchema",
  "WeaponSchema",
  "ZoneSchema",
  "abilityModifier",
  "adjustDamage",
  "applyAction",
  "applyDamage",
  "applyEncounterAction",
  "applyHealing",
  "applyPatch",
  "areaSquares",
  "attackMode",
  "attackOdds",
  "averageDamage",
  "backgroundBonusErrors",
  "baseScoreErrors",
  "builder",
  "cantripTier",
  "castSpell",
  "characterLevel",
  "checkAction",
  "coinsFor",
  "combatantFromCharacter",
  "combatantFromMonster",
  "combatantFromSnapshot",
  "combatantOptions",
  "combatantPassivePerception",
  "computePlaySheet",
  "computeSheet",
  "conditionRolls",
  "coverDegree",
  "createBuild",
  "createCatalog",
  "createEncounter",
  "createHistory",
  "createState",
  "currentCombatant",
  "distanceToPoint",
  "encounterCombatant",
  "encounterEvents",
  "evaluate",
  "explainStat",
  "failOdds",
  "finalScores",
  "findPath",
  "fixedRng",
  "formatCp",
  "formatDamage",
  "formatDiceExpression",
  "gridDistance",
  "inArea",
  "isAlive",
  "isLoaded",
  "isSkill",
  "issuesForLevel",
  "issuesForStep",
  "lineClear",
  "loadPack",
  "lookup",
  "makeAttack",
  "mapCover",
  "mathRng",
  "monsterSpells",
  "multiclassBlockers",
  "obstacles",
  "parseBuild",
  "parseDiceExpression",
  "parseEncounter",
  "parseState",
  "passivePerception",
  "pay",
  "pointBuyCost",
  "pointBuyStatus",
  "previewArea",
  "previewMove",
  "priceInCp",
  "proficiencyBonus",
  "purseValue",
  "reachableSquares",
  "reconcileState",
  "recordAction",
  "refusalCode",
  "replayHistory",
  "reportErrors",
  "resolve",
  "resolveMode",
  "roll",
  "rollAbilityCheck",
  "rollAbilityScore",
  "rollAbilityScores",
  "rollD20",
  "rollDamage",
  "rollSavingThrow",
  "savingThrow",
  "scriptedRng",
  "seededRng",
  "skillName",
  "splitPack",
  "startingEquipment",
  "stat",
  "stepBlocked",
  "stepCost",
  "straightPath",
  "takeDamage",
  "undoAction",
  "updateBuild",
  "useSaveAction",
  "validateBuild",
  "validateReferences",
  "validateState",
]
`;

exports[`public API > srd-rules-engine/http 1`] = `
[
  "createHandler",
]
`;

exports[`public API > srd-rules-engine/node 1`] = `
[
  "ABILITIES",
  "ABILITY_FULL_NAMES",
  "ABILITY_METHODS",
  "ABILITY_NAMES",
  "ADVANTAGE_TARGETS",
  "ALIGNMENTS",
  "ALIGNMENT_NAMES",
  "AbilityBonusSchema",
  "AbilityFullNameSchema",
  "AbilityScoresSchema",
  "AcCalculationSchema",
  "ActionCheckSchema",
  "AdvantageGrantSchema",
  "AreaPreviewSchema",
  "ArmorSchema",
  "BackgroundSchema",
  "BattleMapSchema",
  "BuildError",
  "CHARACTER_CLASSES",
  "CHOICE_KINDS",
  "COIN_VALUES",
  "CORE_TABLES",
  "CURRENCIES",
  "CharacterBuildSchema",
  "CharacterSchema",
  "CharacterStateSchema",
  "ChoiceDefSchema",
  "ChoiceOptionSchema",
  "ClassSchema",
  "CombatantOptionsSchema",
  "ConditionSchema",
  "ContentError",
  "CreationSchema",
  "DAMAGE_TYPES",
  "DEFAULT_SCORE",
  "DEFAULT_SOURCE",
  "DOCUMENT_VERSION",
  "DamageRiderSchema",
  "DocumentVersionSchema",
  "ECONOMY",
  "EFFECT_CONDITIONS",
  "EFFECT_OPS",
  "EFFECT_TARGETS",
  "EffectEndSchema",
  "EffectSchema",
  "EncounterActionSchema",
  "EncounterCombatantSchema",
  "EncounterEffectSchema",
  "EncounterError",
  "EncounterEventSchema",
  "EncounterHistorySchema",
  "EncounterSchema",
  "FEATURE_RULES",
  "FeatGrantSchema",
  "FeatSchema",
  "FeatureActionSchema",
  "GearSchema",
  "GrantsSchema",
  "HelpSchema",
  "ItemGrantSchema",
  "ItemInstanceSchema",
  "LanguageSchema",
  "LevelUpSchema",
  "MAGIC_ITEM_CATEGORIES",
  "MAX_ATTUNED",
  "MAX_DICE",
  "MAX_SIDES",
  "MagicItemSchema",
  "MasteryMarkSchema",
  "MasterySchema",
  "MonsterActionSchema",
  "MonsterSchema",
  "MovePreviewSchema",
  "NO_CONDITION_ROLLS",
  "OPTION_COSTS",
  "OptionEntrySchema",
  "PATCH_OPS",
  "POINT_KINDS",
  "PackManifestSchema",
  "PatchError",
  "PatchSchema",
  "PendingSchema",
  "PlayActionSchema",
  "PlayError",
  "PointBuySchema",
  "PointOfInterestSchema",
  "PrerequisiteSchema",
  "REFUSAL_CODES",
  "ROLL_MODES",
  "ReachableSchema",
  "Resolution",
  "ResourceSchema",
  "SEVERITIES",
  "SIZES",
  "SKILLS",
  "SKILL_ABILITY",
  "SPELL_AREAS",
  "SRD_PACK_ID",
  "STEPS",
  "STEP_TITLES",
  "SpeciesSchema",
  "SpellAreaSchema",
  "SpellDamageSchema",
  "SpellDefSchema",
  "SpellMarkSchema",
  "SpellMechanicsSchema",
  "SpellcastingSchema",
  "SubclassSchema",
  "TABLE_NAMES",
  "TABLE_SCHEMAS",
  "TargetSpecSchema",
  "ToolSchema",
  "TraitSchema",
  "WeaponSchema",
  "ZoneSchema",
  "abilityModifier",
  "adjustDamage",
  "applyAction",
  "applyDamage",
  "applyEncounterAction",
  "applyHealing",
  "applyPatch",
  "areaSquares",
  "attackMode",
  "attackOdds",
  "averageDamage",
  "backgroundBonusErrors",
  "baseScoreErrors",
  "builder",
  "cantripTier",
  "castSpell",
  "characterLevel",
  "checkAction",
  "coinsFor",
  "combatantFromCharacter",
  "combatantFromMonster",
  "combatantFromSnapshot",
  "combatantOptions",
  "combatantPassivePerception",
  "computePlaySheet",
  "computeSheet",
  "conditionRolls",
  "coverDegree",
  "createBuild",
  "createCatalog",
  "createEncounter",
  "createHistory",
  "createState",
  "currentCombatant",
  "distanceToPoint",
  "encounterCombatant",
  "encounterEvents",
  "evaluate",
  "explainStat",
  "failOdds",
  "finalScores",
  "findPath",
  "fixedRng",
  "formatCp",
  "formatDamage",
  "formatDiceExpression",
  "gridDistance",
  "inArea",
  "isAlive",
  "isLoaded",
  "isSkill",
  "issuesForLevel",
  "issuesForStep",
  "lineClear",
  "loadCatalog",
  "loadContentPack",
  "loadPack",
  "lookup",
  "makeAttack",
  "mapCover",
  "mathRng",
  "monsterSpells",
  "multiclassBlockers",
  "obstacles",
  "parseBuild",
  "parseDiceExpression",
  "parseEncounter",
  "parseState",
  "passivePerception",
  "pay",
  "pointBuyCost",
  "pointBuyStatus",
  "previewArea",
  "previewMove",
  "priceInCp",
  "proficiencyBonus",
  "purseValue",
  "reachableSquares",
  "reconcileState",
  "recordAction",
  "refusalCode",
  "replayHistory",
  "reportErrors",
  "resolve",
  "resolveMode",
  "roll",
  "rollAbilityCheck",
  "rollAbilityScore",
  "rollAbilityScores",
  "rollD20",
  "rollDamage",
  "rollSavingThrow",
  "savingThrow",
  "scriptedRng",
  "seededRng",
  "serveNode",
  "skillName",
  "splitPack",
  "srdCatalog",
  "srdPack",
  "startingEquipment",
  "stat",
  "stepBlocked",
  "stepCost",
  "straightPath",
  "takeDamage",
  "undoAction",
  "updateBuild",
  "useSaveAction",
  "validateBuild",
  "validateReferences",
  "validateState",
]
`;

exports[`public API > srd-rules-engine/srd 1`] = `
[
  "SRD_PACK_ID",
  "srdCatalog",
  "srdPack",
]
`;
